fix spacing in empty pages

--- a/src/components/ContactHeader/ContactHeader.scss
+++ b/src/components/ContactHeader/ContactHeader.scss
@@ -2,7 +2,6 @@
 
 .contact-header {
   max-width: 386px;
-  height: 60vh;
   padding: 2rem;
   &__text {
     line-height: 1.5;
