--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,10 +7,6 @@
   margin-bottom: 1.75rem;
   width: 100%;
 
-  &--screenHeight {
-    height: 80vh;
-  }
-
   &__heading {
     color: $colour-primary;
     font-size: $font-size-smallest;
